--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ java {
     }
     manifest {
         attributes("Manifest-Version": "1.0",
-                   "Main-Class": "Main")
+                   "Main-Class": "Core")
     }
 }
 
