--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ remotes {
     horizon {
         host = '10.0.0.10'
         user = 'cheesetron'
-        identity = file('/Users/rttrotter/.ssh/id_rsa')
+        identity = file(System.properties['user.home'] + '/.ssh/id_rsa')
     }
 }
 
@@ -56,14 +56,15 @@ tasks.register('deploy') {
     doLast {
         ssh.run {
             session(remotes.horizon) {
-                // ew
-                zipTree('/Users/rttrotter/Documents/Java Projects/dronebot/build/distributions/dronebot-' + version + '.zip').forEach
+                zipTree(projectDir.absolutePath + '/build/distributions/dronebot-' + version + '.zip').forEach
                         // make sure bin and lib exist otherwise everything goes to heck
-                        {if (it.parent.endsWith("/bin")) {
-                            put from: it, into: '/opt/com.cheesetron/discorddronebot/bin'
-                        } else {
-                            put from: it, into: '/opt/com.cheesetron/discorddronebot/lib'
-                        }}
+                        {
+                            if (it.parent.endsWith("/bin")) {
+                                put from: it, into: '/opt/com.cheesetron/discorddronebot/bin'
+                            } else {
+                                put from: it, into: '/opt/com.cheesetron/discorddronebot/lib'
+                            }
+                        }
                 execute 'sudo systemctl restart com.cheesetron.dronebot.service'
             }
         }
