Implement logging to file

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -2,17 +2,39 @@ status = error
 dest = err
 name = dronebot
 
-property.filename = /var/log/com.cheesetron/rolling.log
+property.filename = /var/log/com.cheesetron/discorddronebot.log
 
 filter.threshold.type = ThresholdFilter
 filter.threshold.level = debug
 
 appender.console.type = Console
-appender.console.name = ToStandardOut
+appender.console.name = STOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %m%n
 appender.console.filter.threshold.type = ThresholdFilter
 appender.console.filter.threshold.level = info
 
+##
+appender.rollingFileAppender.name = var.cheesetron
+appender.rollingFileAppender.type = RollingFile
+appender.rollingFileAppender.fileName = ${filename}
+appender.rollingFileAppender.filePattern = /var/log/com.cheesetron/discorddronebot/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rollingFileAppender.layout.type = PatternLayout
+appender.rollingFileAppender.layout.pattern = %d %highlight{%p %C{1.} [%t] %m}%n
+appender.rollingFileAppender.policies.type = Policies
+appender.rollingFileAppender.policies.time.type = TimeBasedTriggeringPolicy
+appender.rollingFileAppender.policies.time.interval = 999999999
+appender.rollingFileAppender.policies.time.modulate = true
+appender.rollingFileAppender.strategy.type = DefaultRolloverStrategy
+appender.rollingFileAppender.strategy.max = 5
 
-rootLogger = info, ToStandardOut
+## mainLogger is just a placeholder
+logger.mainLogger.name = com.cheesetron.dronebot
+logger.mainLogger = info, var.cheesetron
+logger.mainLogger.additivity = false
+
+logger.voiceLogger.name = com.cheesetron.dronebot.audio
+logger.voiceLogger = debug, var.cheesetron
+logger.voiceLogger.additivity = false
+
+rootLogger = info, var.cheesetron
