--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ java {
 }
 
 group 'com.cheesetron'
-version '1.0'
+// breaking.feature.bugfix
+version '2.1.0'
 
 repositories {
     mavenCentral()
@@ -65,6 +66,7 @@ tasks.register('deploy') {
                                 put from: it, into: '/opt/com.cheesetron/discorddronebot/lib'
                             }
                         }
+                execute 'echo ' + version + ' >> /opt/com.cheesetron/discorddronebot/version'
                 execute 'sudo systemctl restart com.cheesetron.dronebot.service'
             }
         }
