Change log level and fix guild logging syntax

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -30,11 +30,11 @@ appender.rollingFileAppender.strategy.max = 5
 
 ## mainLogger is just a placeholder
 logger.mainLogger.name = com.cheesetron.dronebot
-logger.mainLogger = info, var.cheesetron
+logger.mainLogger = error, var.cheesetron
 logger.mainLogger.additivity = false
 
 logger.voiceLogger.name = com.cheesetron.dronebot.audio
-logger.voiceLogger = debug, var.cheesetron
+logger.voiceLogger = error, var.cheesetron
 logger.voiceLogger.additivity = false
 
-rootLogger = info, var.cheesetron
+rootLogger = error, var.cheesetron
