--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,8 @@ repositories {
 dependencies {
     implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
-    implementation 'net.dv8tion:JDA:5.0.0-alpha.18'
+    implementation 'net.dv8tion:JDA:5.0.0-beta.13'
     implementation 'com.sedmelluq:lavaplayer:1.3.77'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
 application {
@@ -46,7 +43,7 @@ test {
 
 remotes {
     horizon {
-        host = '10.0.0.10'
+        host = '137.99.157.253'
         user = 'cheesetron'
         identity = file(System.properties['user.home'] + '/.ssh/id_rsa')
     }
