--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -28,7 +28,7 @@ appender.rollingFileAppender.policies.time.modulate = true
 appender.rollingFileAppender.strategy.type = DefaultRolloverStrategy
 appender.rollingFileAppender.strategy.max = 5
 
-## mainLogger is just a placeholder
+## mainLogger is just a placeholder, its name property actually determines what this attaches to
 logger.mainLogger.name = com.cheesetron.dronebot
 logger.mainLogger = error, var.cheesetron
 logger.mainLogger.additivity = false
