--- a/build.gradle
+++ b/build.gradle
@@ -14,21 +14,21 @@ java {
     }
 }
 
-group 'com.cheesetron'
+group = 'com.cheesetron'
 // breaking.feature.bugfix
-version '2.1.1'
+version = '2.2.1'
 
 repositories {
     mavenCentral()
 
     // lavaplayer repository
-    maven { url 'https://m2.dv8tion.net/releases' }
+    maven { url = 'https://m2.dv8tion.net/releases' }
 }
 
 dependencies {
-    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
-    implementation 'net.dv8tion:JDA:5.0.0-beta.20'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.24.3'
+    implementation 'net.dv8tion:JDA:5.3.0'
     implementation 'com.sedmelluq:lavaplayer:1.3.78'
 }
 
