--- a/examplebot/build.gradle
+++ b/examplebot/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group 'net.dv8tion'
-version '1.0.0'
+group = 'net.dv8tion'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
